[package]
name = "crabstructor"
version = "0.1.0-beta"
authors = ["devil <europedreadlydevil@gmail.com>"]
description = "Simple constructor generator for named structures"
keywords = ["constructor", "derive", "auto_constructor"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
crabstructor_derive = { version = "0.1.0", path = "derive" }

[workspace]
members = [".", "derive"]

[features]
derive = []