[package]
name = "crabstructor"
version = "0.2.0-beta"
authors = ["devil <europedreadlydevil@gmail.com>"]
description = "Simple constructor generator for named structures"
keywords = ["constructor", "derive", "auto_constructor"]
edition = "2018"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = {version = "1.0.86"}
syn = { version = "2", features = ["full", "extra-traits"] }